syntax = "proto3";

package lith;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// GetRequest defines a request for any supported resource type that a client
// may fetch from the server.
message GetRequest {
    oneof req_type {
        // view_request returns visual data used by a client to render info
        ViewRequestType view_request = 1;
    }
}

// GetResponse defines a supported resource requested by a client.
// It may be one of (though not limited to) the following: (view,
// sound_group_membership, sound_group_info).
message GetResponse {
    // msg contains a hello world response.
    string msg = 1;
}

// ViewId contains the ID structure used to uniquely identify a "view" resource.
message ViewId {
    // view_name is a friendly name given to a "UI view" rendered by a client.
    string view_name = 1;

    oneof service {
        // com_sound_mixer represents the service type supported by this server
        // that manages distributed devices for a given multiplexed audio
        // channel stream.
        google.protobuf.Empty com_sound_mixer = 2;
    }
}

// ViewRequestType defines a "page view" request type that a visual client can
// use to display information.
message ViewRequestType {
    // view_id is a marshaled proto containing unique identifyable information
    // for the current view being rendered by the client.
    ViewId view_id = 1;
}